--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
+plugins {
+    id 'org.springframework.boot' version '2.0.5.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.7.RELEASE'
+}
+
 apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'application'
 
 
-mainClassName = 'TargygrafPP.Main'
+mainClassName = 'spring_interface.Application'
 
 repositories {
     jcenter()
@@ -19,4 +24,8 @@ dependencies {
 
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    
+    //Springboot
+    implementation 'org.springframework.boot:spring-boot-dependencies:2.0.5.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
