--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ mainClassName = 'spring_interface.Application'
 
 repositories {
     jcenter()
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -28,4 +29,10 @@ dependencies {
     //Springboot
     implementation 'org.springframework.boot:spring-boot-dependencies:2.0.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    
+    //Appache
+    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+    
+    //Tablua
+    compile 'com.github.tabulapdf:tabula-java:1.0.3'
 }
