--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'application'
 
+sourceCompatibility = '1.8'
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 mainClassName = 'spring_interface.Application'
 
