--- a/tantervek/proginfo.yml
+++ b/tantervek/proginfo.yml
@@ -4,29 +4,29 @@ collumnsize: 7
 semestermode: pertable
 name: 
     col: 1
-    regex: "[a-zA-Z .]+"
+    regex: "(?>.?\n?)+"
 code:
     col: 2
-    regex: "VE|KE|PE|NK[A-Z]{4}[A-Z0-9]{1}[0-9]{3}[A-Z]{1}"
+    regex: "((?>VE|KE|PE|NK)[A-Z]{4}[A-Z0-9]{1}[0-9]{3}[A-Z]{1})"
 credits:
     col: 4
-    regex: "([0-9]{1,2})[\n][ ]+[0-9]+[ ]+[0-9]+"
+    regex: "([0-9]{1,2})[\n][ ]*[0-9]+[ ]+[0-9]+"
 prerequisites:
     col: 6
-    regex: "(VE|KE|PE|NK[A-Z]{4}[A-Z0-9]{1}[0-9]{3}[A-Z]{1})[\n]?"
+    regex: "((?>VE|KE|PE|NK)[A-Z]{4}[A-Z0-9]{1}[0-9]{3}[A-Z]{1})[\n]?|-"
 ---
 pages: 14-16
 collumnsize: 7
 semestermode: 0
 name: 
     col: 1
-    regex: "[a-zA-Z .]+"
+    regex: "(?>.?\n?)+"
 code:
     col: 2
-    regex: "VE|KE|PE|NK[A-Z]{4}[A-Z0-9]{1}[0-9]{3}[A-Z]{1}"
+    regex: "((?>VE|KE|PE|NK)[A-Z]{4}[A-Z0-9]{1}[0-9]{3}[A-Z]{1})"
 credits:
     col: 4
-    regex: "([0-9]{1,2})[\n][ ]+[0-9]+[ ]+[0-9]+"
+    regex: "([0-9]{1,2})[\n][ ]*[0-9]+[ ]+[0-9]+"
 prerequisites:
     col: 6
-    regex: "(VE|KE|PE|NK[A-Z]{4}[A-Z0-9]{1}[0-9]{3}[A-Z]{1})[\n]?"
+    regex: "((?>VE|KE|PE|NK)[A-Z]{4}[A-Z0-9]{1}[0-9]{3}[A-Z]{1})[\n]?|-"
