--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,9 @@ dependencies {
     
     //Tablua
     compile 'com.github.tabulapdf:tabula-java:1.0.3'
+    
+    //Apache POI
+    compile 'org.apache.poi:poi:4.1.2'
+    
+    compile 'org.apache.poi:poi-ooxml:4.1.2'
 }
